trine_stage1.h


/* Lens weights for comparison (same semantics as trine_lens_t) */
typedef struct {
    float weights[TRINE_S1_CHAINS];
} trine_s1_lens_t;

/* Configuration for dedup operations */
typedef struct {
    float threshold;           /* Cosine threshold for "duplicate" (0.0-1.0) */
    trine_s1_lens_t lens;      /* Which lens to use for comparison */
    int calibrate_length;      /* 1 = apply length-aware calibration */
} trine_s1_config_t;

/* Result of a single dedup check */
typedef struct {
    int is_duplicate;          /* 1 if similarity >= threshold */
    float similarity;          /* Raw lens-weighted cosine */
    float calibrated;          /* Length-calibrated score (if enabled) */
    int matched_index;         /* Index of best match (for batch), -1 if none */
} trine_s1_result_t;


/* Compare two packed embeddings without unpacking.
 * Unpacks internally, computes lens-weighted cosine.
 * Slightly slower than comparing unpacked, but saves memory in storage. */
float trine_s1_compare_packed(const uint8_t a[48], const uint8_t b[48],
                               const trine_s1_lens_t *lens);


/* ═══════════════════════════════════════════════════════════════════════
 * Length Calibration
 * ═══════════════════════════════════════════════════════════════════════ */

/* Compute fill ratio for a 240-byte embedding (fraction of non-zero channels).
 * Returns value in [0.0, 1.0]. */
float trine_s1_fill_ratio(const uint8_t emb[240]);


/* Calibrate raw cosine similarity based on fill ratios of both embeddings.
 * Adjusts for the fact that sparse embeddings (short texts) have lower
 * baseline cosine than dense embeddings (long texts).
 * Formula: calibrated = raw_cosine / sqrt(fill_a * fill_b)
 * Clamped to [0.0, 1.0]. */
float trine_s1_calibrate(float raw_cosine, float fill_a, float fill_b);