bindings/python/pytrine/_binding.py


    # float trine_s1_compare_packed(const uint8_t a[48], const uint8_t b[48], const trine_s1_lens_t *lens)
    lib.trine_s1_compare_packed.argtypes = [
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(TrineS1Lens),
    ]
    lib.trine_s1_compare_packed.restype = ctypes.c_float

    # ── Stage-1 Calibration API ──────────────────────────────────────

    # float trine_s1_fill_ratio(const uint8_t emb[240])
    lib.trine_s1_fill_ratio.argtypes = [ctypes.POINTER(ctypes.c_uint8)]
    lib.trine_s1_fill_ratio.restype = ctypes.c_float

    # float trine_s1_calibrate(float raw_cosine, float fill_a, float fill_b)
    lib.trine_s1_calibrate.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float]
    lib.trine_s1_calibrate.restype = ctypes.c_float

    # ── Route API ────────────────────────────────────────────────────

    # trine_route_t *trine_route_create(const trine_s1_config_t *config)
    lib.trine_route_create.argtypes = [ctypes.POINTER(TrineS1Config)]
    lib.trine_route_create.restype = TrineRoutePtr

    # int trine_route_add(trine_route_t *rt, const uint8_t emb[240], const char *tag)
    lib.trine_route_add.argtypes = [TrineRoutePtr, ctypes.POINTER(ctypes.c_uint8), ctypes.c_char_p]
    lib.trine_route_add.restype = ctypes.c_int

    # trine_s1_result_t trine_route_query(const trine_route_t *rt, const uint8_t candidate[240], trine_route_stats_t *stats)
    lib.trine_route_query.argtypes = [TrineRoutePtr, ctypes.POINTER(ctypes.c_uint8), ctypes.POINTER(TrineRouteStats)]
    lib.trine_route_query.restype = TrineS1Result

    # int trine_route_count(const trine_route_t *rt)
    lib.trine_route_count.argtypes = [TrineRoutePtr]
    lib.trine_route_count.restype = ctypes.c_int

    # const char *trine_route_tag(const trine_route_t *rt, int index)
    lib.trine_route_tag.argtypes = [TrineRoutePtr, ctypes.c_int]
    lib.trine_route_tag.restype = ctypes.c_char_p

    # const uint8_t *trine_route_embedding(const trine_route_t *rt, int index)
    lib.trine_route_embedding.argtypes = [TrineRoutePtr, ctypes.c_int]
    lib.trine_route_embedding.restype = ctypes.POINTER(ctypes.c_uint8)

    # void trine_route_free(trine_route_t *rt)
    lib.trine_route_free.argtypes = [TrineRoutePtr]
    lib.trine_route_free.restype = None

    # int trine_route_save(const trine_route_t *rt, const char *path)
    lib.trine_route_save.argtypes = [TrineRoutePtr, ctypes.c_char_p]
    lib.trine_route_save.restype = ctypes.c_int

    # trine_route_t *trine_route_load(const char *path)
    lib.trine_route_load.argtypes = [ctypes.c_char_p]
    lib.trine_route_load.restype = TrineRoutePtr

    # void trine_route_global_stats(const trine_route_t *rt, trine_route_stats_t *stats)
    lib.trine_route_global_stats.argtypes = [TrineRoutePtr, ctypes.POINTER(TrineRouteStats)]
    lib.trine_route_global_stats.restype = None

    # int trine_route_set_recall(trine_route_t *rt, int mode)
    lib.trine_route_set_recall.argtypes = [TrineRoutePtr, ctypes.c_int]
    lib.trine_route_set_recall.restype = ctypes.c_int

    # int trine_route_get_recall(const trine_route_t *rt)
    lib.trine_route_get_recall.argtypes = [TrineRoutePtr]
    lib.trine_route_get_recall.restype = ctypes.c_int

    # int trine_route_bucket_sizes(const trine_route_t *rt, int band, int *sizes)
    lib.trine_route_bucket_sizes.argtypes = [TrineRoutePtr, ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
    lib.trine_route_bucket_sizes.restype = ctypes.c_int

    # ── Canon API ────────────────────────────────────────────────────

    # int trine_canon_apply(const char *text, size_t len, int preset, char *out, size_t out_cap, size_t *out_len)
    lib.trine_canon_apply.argtypes = [
        ctypes.c_char_p,
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.trine_canon_apply.restype = ctypes.c_int

    # const char *trine_canon_preset_name(int preset)
    lib.trine_canon_preset_name.argtypes = [ctypes.c_int]
    lib.trine_canon_preset_name.restype = ctypes.c_char_p

    # ── Stage-2 Inference API ────────────────────────────────────────

    # trine_s2_model_t *trine_s2_create_identity(void)
    lib.trine_s2_create_identity.argtypes = []
    lib.trine_s2_create_identity.restype = TrineS2ModelPtr

    # trine_s2_model_t *trine_s2_create_random(uint32_t n_cells, uint64_t seed)
    lib.trine_s2_create_random.argtypes = [ctypes.c_uint32, ctypes.c_uint64]
    lib.trine_s2_create_random.restype = TrineS2ModelPtr

    # trine_s2_model_t *trine_s2_create_from_parts(const void *proj, uint32_t n_cells, uint64_t topo_seed)
    lib.trine_s2_create_from_parts.argtypes = [ctypes.c_void_p, ctypes.c_uint32, ctypes.c_uint64]
    lib.trine_s2_create_from_parts.restype = TrineS2ModelPtr

    # trine_s2_model_t *trine_s2_create_block_diagonal(const uint8_t *block_weights, int K, uint32_t n_cells, uint64_t topo_seed)
    lib.trine_s2_create_block_diagonal.argtypes = [
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.c_int,
        ctypes.c_uint32,
        ctypes.c_uint64,
    ]
    lib.trine_s2_create_block_diagonal.restype = TrineS2ModelPtr

    # void trine_s2_free(trine_s2_model_t *model)
    lib.trine_s2_free.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_free.restype = None

    # int trine_s2_encode(const trine_s2_model_t *model, const char *text, size_t len, uint32_t depth, uint8_t out[240])
    lib.trine_s2_encode.argtypes = [
        TrineS2ModelPtr,
        ctypes.c_char_p,
        ctypes.c_size_t,
        ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_uint8),
    ]
    lib.trine_s2_encode.restype = ctypes.c_int

    # int trine_s2_encode_from_trits(const trine_s2_model_t *model, const uint8_t stage1[240], uint32_t depth, uint8_t out[240])
    lib.trine_s2_encode_from_trits.argtypes = [
        TrineS2ModelPtr,
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_uint8),
    ]
    lib.trine_s2_encode_from_trits.restype = ctypes.c_int

    # int trine_s2_encode_depths(const trine_s2_model_t *model, const char *text, size_t len, uint32_t max_depth, uint8_t *out, size_t out_size)
    lib.trine_s2_encode_depths.argtypes = [
        TrineS2ModelPtr,
        ctypes.c_char_p,
        ctypes.c_size_t,
        ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.c_size_t,
    ]
    lib.trine_s2_encode_depths.restype = ctypes.c_int

    # float trine_s2_compare(const uint8_t a[240], const uint8_t b[240], const void *lens)
    lib.trine_s2_compare.argtypes = [
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.c_void_p,
    ]
    lib.trine_s2_compare.restype = ctypes.c_float

    # int trine_s2_info(const trine_s2_model_t *model, trine_s2_info_t *info)
    lib.trine_s2_info.argtypes = [TrineS2ModelPtr, ctypes.POINTER(TrineS2Info)]
    lib.trine_s2_info.restype = ctypes.c_int

    # void trine_s2_set_projection_mode(trine_s2_model_t *model, int mode)
    lib.trine_s2_set_projection_mode.argtypes = [TrineS2ModelPtr, ctypes.c_int]
    lib.trine_s2_set_projection_mode.restype = None

    # int trine_s2_get_projection_mode(const trine_s2_model_t *model)
    lib.trine_s2_get_projection_mode.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_get_projection_mode.restype = ctypes.c_int

    # int trine_s2_is_identity(const trine_s2_model_t *model)
    lib.trine_s2_is_identity.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_is_identity.restype = ctypes.c_int

    # ── Stage-2 Gate-Aware Comparison (Phase B1) ────────────────────

    # float trine_s2_compare_gated(const trine_s2_model_t *model, const uint8_t a[240], const uint8_t b[240])
    lib.trine_s2_compare_gated.argtypes = [
        TrineS2ModelPtr,
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
    ]
    lib.trine_s2_compare_gated.restype = ctypes.c_float

    # ── Stage-2 Per-Chain Blend Comparison (Phase B2) ─────────────

    # float trine_s2_compare_chain_blend(s1_a, s1_b, s2_a, s2_b, alpha[4])
    lib.trine_s2_compare_chain_blend.argtypes = [
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_float),
    ]
    lib.trine_s2_compare_chain_blend.restype = ctypes.c_float

    # ── Stage-2 Stacked Depth ────────────────────────────────────

    # void trine_s2_set_stacked_depth(trine_s2_model_t *model, int enable)
    lib.trine_s2_set_stacked_depth.argtypes = [TrineS2ModelPtr, ctypes.c_int]
    lib.trine_s2_set_stacked_depth.restype = None

    # int trine_s2_get_stacked_depth(const trine_s2_model_t *model)
    lib.trine_s2_get_stacked_depth.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_get_stacked_depth.restype = ctypes.c_int

    # ── Stage-2 Additional Introspection ─────────────────────────

    # uint32_t trine_s2_get_cascade_cells(const trine_s2_model_t *model)
    lib.trine_s2_get_cascade_cells.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_get_cascade_cells.restype = ctypes.c_uint32

    # uint32_t trine_s2_get_default_depth(const trine_s2_model_t *model)
    lib.trine_s2_get_default_depth.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_get_default_depth.restype = ctypes.c_uint32

    # const void *trine_s2_get_projection(const trine_s2_model_t *model)
    lib.trine_s2_get_projection.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_get_projection.restype = ctypes.c_void_p

    # const uint8_t *trine_s2_get_block_projection(const trine_s2_model_t *model)
    lib.trine_s2_get_block_projection.argtypes = [TrineS2ModelPtr]
    lib.trine_s2_get_block_projection.restype = ctypes.POINTER(ctypes.c_uint8)

    # ── Stage-2 Adaptive Blend ─────────────────────────────────────

    # void trine_s2_set_adaptive_alpha(trine_s2_model_t *model, const float buckets[10])
    lib.trine_s2_set_adaptive_alpha.argtypes = [TrineS2ModelPtr, ctypes.POINTER(ctypes.c_float)]
    lib.trine_s2_set_adaptive_alpha.restype = None

    # float trine_s2_compare_adaptive_blend(model, s1_a, s1_b, s2_a, s2_b)
    lib.trine_s2_compare_adaptive_blend.argtypes = [
        TrineS2ModelPtr,
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
    ]
    lib.trine_s2_compare_adaptive_blend.restype = ctypes.c_float

    # ── Stage-2 Persistence API ──────────────────────────────────────

    # int trine_s2_save(const trine_s2_model_t *model, const char *path, const trine_s2_save_config_t *config)
    lib.trine_s2_save.argtypes = [TrineS2ModelPtr, ctypes.c_char_p, ctypes.POINTER(TrineS2SaveConfig)]
    lib.trine_s2_save.restype = ctypes.c_int

    # trine_s2_model_t *trine_s2_load(const char *path)
    lib.trine_s2_load.argtypes = [ctypes.c_char_p]
    lib.trine_s2_load.restype = TrineS2ModelPtr

    # int trine_s2_validate(const char *path)
    lib.trine_s2_validate.argtypes = [ctypes.c_char_p]
    lib.trine_s2_validate.restype = ctypes.c_int

    # ── Stage-2 Hebbian Training API ─────────────────────────────────

    # trine_hebbian_state_t *trine_hebbian_create(const trine_hebbian_config_t *config)
    lib.trine_hebbian_create.argtypes = [ctypes.POINTER(TrineHebbianConfig)]
    lib.trine_hebbian_create.restype = TrineHebbianPtr

    # void trine_hebbian_free(trine_hebbian_state_t *state)
    lib.trine_hebbian_free.argtypes = [TrineHebbianPtr]
    lib.trine_hebbian_free.restype = None
